// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markWaveBoundary > sets dataset to the id when the trigger is an id 1`] = `
<div
  data-v-wave-boundary="stringId"
/>
`;

exports[`markWaveBoundary > sets dataset to true when trigger is not an id 1`] = `
<div
  data-v-wave-boundary="true"
/>
`;
